# flex_uv

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/flex_uv/: __init__.py  app.py
